--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
-<!-- ModuleDropper UI -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>ModuleDropper v3</title>
-<link rel='stylesheet' href='style.css'>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ModuleDropper v8</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<h1>Welcome to ModuleDropper v3</h1>
-<div id='module-list'></div>
-<script src='script.js'></script>
+  <h1>Welcome to ModuleDropper v8</h1>
+  <p>Explore and test 200 modules. Click "Install" to try any.</p>
+  <input type="text" id="searchInput" placeholder="Search modules..." />
+  <select id="categorySelect"><option value="all">All Categories</option></select>
+  <div id="moduleContainer" class="module-grid"></div>
+  <script src="script.js"></script>
 </body>
 </html>
