--- a/index.html
+++ b/index.html
@@ -3,15 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ModuleDropper v8</title>
+  <title>XPLORE Suite – 320+ Modules</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Welcome to ModuleDropper v8</h1>
-  <p>Explore and test 200 modules. Click "Install" to try any.</p>
-  <input type="text" id="searchInput" placeholder="Search modules..." />
-  <select id="categorySelect"><option value="all">All Categories</option></select>
-  <div id="moduleContainer" class="module-grid"></div>
+  <header>
+    <h1>Welcome to XPLORE ModuleDropper v8</h1>
+    <p>Browse over <strong>320 fully customizable XPLORE modules</strong>. Click "Install" to activate inside your app suite.</p>
+  </header>
+
+  <section class="controls">
+    <input type="text" id="searchInput" placeholder="Search modules by name, tags..." />
+    <select id="categorySelect">
+      <option value="all">All Categories</option>
+    </select>
+  </section>
+
+  <main>
+    <div id="moduleContainer" class="module-grid"></div>
+  </main>
+
+  <footer>
+    <p>XPLORE Suite &copy; 2025 – Auto-Sync + Module Loader Engine</p>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
