--- a/index.html
+++ b/index.html
@@ -3,23 +3,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>XPLORE Modules</title>
-  <link rel="stylesheet" href="style.css">
+  <title>XPLORE Suite – 320+ Modules</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>XPLORE ModuleDropper</h1>
-    <p id="moduleCount">Loading modules...</p>
+    <h1>Welcome to XPLORE ModuleDropper v8</h1>
+    <p>Browse over <strong>320 fully customizable XPLORE modules</strong>. Click "Install" to activate inside your app suite.</p>
   </header>
 
-  <div class="controls">
-    <input type="text" id="searchInput" placeholder="Search modules..." />
+  <section class="controls">
+    <input type="text" id="searchInput" placeholder="Search modules by name, tags..." />
     <select id="categorySelect">
       <option value="all">All Categories</option>
     </select>
-  </div>
+  </section>
 
-  <div id="moduleContainer" class="grid-container"></div>
+  <main>
+    <div id="moduleContainer" class="module-grid"></div>
+  </main>
+
+  <footer>
+    <p>XPLORE Suite &copy; 2025 – Auto-Sync + Module Loader Engine</p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
