--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
   <section class="controls">
     <input type="text" id="searchInput" placeholder="Search modules by name, tags..." />
+    <button id="viewStackBtn" onclick="showStack()" class="glow-btn" style="display:none;">
+  🧰 View Stack
+</button>
     <select id="categorySelect">
       <option value="all">All Categories</option>
     </select>
