--- a/hiring-app/index.html
+++ b/hiring-app/index.html
@@ -1,28 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>XPLORE Hiring Portal</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>XPLORE Hiring Desk</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>🧑‍💼 XPLORE Hiring Desk</h1>
-    <p>Track and manage your job applicants</p>
+    <h1>👨‍💼 XPLORE Hiring Desk</h1>
+    <p>Track, filter, and export your job applicants</p>
   </header>
-  <main>
-    <section class="applicant-form">
-      <h2>Add Applicant</h2>
-      <input id="applicantName" placeholder="Applicant Name" />
-      <input id="applicantEmail" placeholder="Email" />
-      <button onclick="addApplicant()">➕ Add to Queue</button>
-    </section>
-    <section>
-      <h2>📋 Applicant Queue</h2>
-      <ul id="applicantList"></ul>
-    </section>
-  </main>
+  <section class="form-section">
+    <input type="text" id="name" placeholder="Applicant Name">
+    <input type="email" id="email" placeholder="Email">
+    <select id="role">
+      <option value="">Select Role</option>
+      <option value="Sales">Sales</option>
+      <option value="Tech Support">Tech Support</option>
+      <option value="Developer">Developer</option>
+    </select>
+    <select id="status">
+      <option value="New">New</option>
+      <option value="Interviewed">Interviewed</option>
+      <option value="Hired">Hired</option>
+    </select>
+    <button onclick="addApplicant()">➕ Add to Queue</button>
+  </section>
+
+  <section class="filter-section">
+    <select id="filterRole" onchange="filterApplicants()">
+      <option value="">All Roles</option>
+      <option value="Sales">Sales</option>
+      <option value="Tech Support">Tech Support</option>
+      <option value="Developer">Developer</option>
+    </select>
+    <select id="filterStatus" onchange="filterApplicants()">
+      <option value="">All Statuses</option>
+      <option value="New">New</option>
+      <option value="Interviewed">Interviewed</option>
+      <option value="Hired">Hired</option>
+    </select>
+    <button onclick="exportCSV()">📁 Export CSV</button>
+  </section>
+
+  <section id="queueSection">
+    <h2>📋 Applicant Queue</h2>
+    <table id="queueTable">
+      <thead>
+        <tr><th>Name</th><th>Email</th><th>Role</th><th>Status</th><th>Actions</th></tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </section>
+
   <script src="script.js"></script>
 </body>
 </html>
