--- a/hiring-app/index.html
+++ b/hiring-app/index.html
@@ -1,1 +1,45 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>XPLORE Job Application</title>
+  <link rel="stylesheet" href="xplore-jobapp-style.css">
+</head>
+<body>
+  <div class="form-container">
+    <h1>XPLORE Job Application</h1>
+    <form id="jobAppForm">
+      <label for="name">Full Name</label>
+      <input type="text" id="name" name="name" required>
+
+      <label for="email">Email Address</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="phone">Phone Number</label>
+      <input type="tel" id="phone" name="phone" required>
+
+      <label for="position">Position Desired</label>
+      <input type="text" id="position" name="position" required>
+
+      <label for="referredBy">Referred By</label>
+      <input type="text" id="referredBy" name="referredBy">
+
+      <label for="resume">Upload Resume</label>
+      <input type="file" id="resume" name="resume" accept=".pdf,.doc,.docx" required>
+
+      <label for="address">Full Address</label>
+      <textarea id="address" name="address" rows="2" required></textarea>
+
+      <label for="idUpload">Upload ID</label>
+      <input type="file" id="idUpload" name="idUpload" accept="image/*,.pdf" required>
+
+      <label><input type="checkbox" required> I agree to the XPLORE Terms</label>
+      <label><input type="checkbox" required> I accept the 1099 Independent Contractor terms</label>
+
+      <button type="submit" class="submit-btn">Submit Application</button>
+    </form>
+  </div>
+</body>
+</html>
