--- a/hiring-app/index.html
+++ b/hiring-app/index.html
@@ -8,25 +8,30 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="XPLORE Logo" class="logo" />
+    <img src="assets/logo.png" alt="XPLORE Logo" />
     <h1>XPLORE Job Application</h1>
+    <p>Apply now to join our remote team!</p>
   </header>
-
-  <form id="jobAppForm">
-    <input type="text" placeholder="Full Name" required />
-    <input type="email" placeholder="Email Address" required />
-    <input type="tel" placeholder="Phone Number" required />
-    <input type="text" placeholder="Position Desired" required />
-    <input type="text" placeholder="Referred By" />
-    <label>Upload Resume <input type="file" /></label>
-    <label>Full Address <textarea></textarea></label>
-    <label>Upload ID <input type="file" /></label>
-    <label><input type="checkbox" required /> I agree to the XPLORE Terms</label>
-    <label><input type="checkbox" required /> I accept the 1099</label>
-    <button type="submit">Submit Application</button>
-  </form>
-
-  <footer><p>&copy; 2025 XPLORE Suite – Job Portal</p></footer>
+  <main>
+    <form id="jobAppForm">
+      <input type="text" placeholder="Full Name" name="fullName" required /><br />
+      <input type="email" placeholder="Email Address" name="email" required /><br />
+      <input type="text" placeholder="Phone Number" name="phone" required /><br />
+      <input type="text" placeholder="Position Desired" name="position" required /><br />
+      <select id="referredBy" name="referredBy">
+        <option>Referred By (Select Recruiter)</option>
+      </select><br />
+      <textarea name="address" placeholder="Full Address"></textarea><br />
+      Upload Resume: <input type="file" name="resume" /><br />
+      Upload ID: <input type="file" name="idUpload" /><br />
+      <input type="checkbox" required /> I agree to the XPLORE Terms<br />
+      <input type="checkbox" required /> I accept the 1099<br />
+      <button type="submit">Submit Application</button>
+    </form>
+  </main>
+  <footer>
+    <p>&copy; 2025 XPLORE Enterprise</p>
+  </footer>
   <script src="script.js"></script>
 </body>
 </html>
