--- a/hiring-app/index.html
+++ b/hiring-app/index.html
@@ -27,12 +27,12 @@
       <option value="Manager">Manager</option>
       </select>
 
-      <select id="referredBy">
-      <label for="referredBy">Referred By:</label>
-      <select id="referredBy" onchange="toggleManualEntry()">
-      <option disabled selected>Select Recruiter</option>
-      </select>
-
+<!-- Recruiter Dropdown -->
+<label for="referredBy">Referred By:</label>
+<select id="referredBy" onchange="toggleManualEntry()">
+  <option disabled selected>Select Recruiter</option>
+</select>
+      
 <!-- Manual entry input -->
 <input type="text" id="manualRecruiter" placeholder="Or type recruiter name..." style="display:none;" />
 
